# phoenix

./: .gitignore  LICENSE  Makefile  README.md  bmpfont.xcf  configure.py  configure.sh  meson.build
core/: .gitignore  Makefile  README.md  TODO_PERF.md  callgrind.out.11757  callgrind.out.13078  callgrind.out.13342  callgrind.out.7495
core/include/glad/: glad.h
core/include/phoenix/: audio.h  box.h  color.h  font.h  imgfile.h  renderer.h  timer.h
core/src/: audio.c  box.c  box.ll  color.c  default_font.c  gl_shaders.c  glad.c  imgfile.c  renderer.c  renderer_gl.c  texture_gl.c  timer.c
core/test/: .gitignore  cpu_bench.c  dots.c
core/test/hitmarkers/: hitmarkers.c
include/glad/: glad.h
include/phoenix/: audio.h  box.h  color.h  container.h  entity.h  error.h  font.h  geometry.h  glestest.h  input.h  phoenix.h  pse.h  renderer.h  request.h  texture.h  timer.h  ttfont.h
pxaudio/: .gitignore  Cargo.toml
pxaudio/src/: ffi.rs  lib.rs  mixer.rs
pxglrenderer/: Cargo.toml
pxglrenderer/src/: geometry.rs  lib.rs
pxrenderer/: .gitignore  Cargo.toml
pxrenderer/src/: camera.rs  color.rs  geometry.rs  lib.rs  traits.rs  window_trait.rs
pxrenderer/src/renderer/: mod.rs
src/: audio.c  bmpfont.c  box.c  color.c  color.cpp  container.h  default_font.c  geometry.cpp  gl_shaders.c  glad.c  imgfile.c  input.c  meson.build  renderer.c  renderer_gl.c  request.c  texture_gl.c  timer.c  ttfont.c
src/3d/: main.cpp
test/: cpu_bench.c  dots.c  hitmarkers.c  hitmarkers.cpp  hm_old.c  memepaths.h
test/hitmarkers/: hitmarker_image.c  hitmarkers.c
(+4 files in other folders)
